--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -10,19 +10,26 @@
 
 @media (min-width: 500px) and (min-height: 400px) {
     .Burger {
-        width: 350px;
-        height: 300px;
+        width: 250px;
+        height: 200px;
     }
 }
 
 @media (min-width: 500px) and (min-height: 401px) {
     .Burger {
-        width: 450px;
-        height: 400px;
+        width: 350px;
+        height: 300px;
     }
 }
 
 @media (min-width: 1000px) and (min-height: 700px) {
+    .Burger {
+        width:500px;
+        height:350px;
+    }
+}
+
+@media (min-width: 1250px) and (min-height: 1000px) {
     .Burger {
         width: 700px;
         height: 600px;
